--- a/sampleapp/app/src/main/res/layout/receipt.xml
+++ b/sampleapp/app/src/main/res/layout/receipt.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:padding="20dp"
     android:layout_height="match_parent"
+    android:minWidth="300dp"
     android:weightSum="1">
     <TextView
         android:layout_width="match_parent"
@@ -25,9 +27,6 @@
             android:padding="20dp"
             android:layout_height="match_parent"
             android:weightSum="1">
-
-
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -112,6 +111,28 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:id="@+id/textViewResAmount"
 
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp">
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Tip Amount"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:id="@+id/textViewResTipAmount"
                     android:layout_weight="1" />
 
             </LinearLayout>
