--- a/sampleapp/app/src/main/res/menu/menu_main.xml
+++ b/sampleapp/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/logout" android:title="@string/logout" />
+    <item android:id="@+id/ota_update" android:title="@string/otaupdate"/>
+    <item android:id="@+id/ota_update_demo" android:title="@string/otaupdate_demo"/>
+    <!--item android:id="@+id/ota_update_headless" android:title="@string/otaupdate_background"/-->
 </menu>
