--- a/sampleapp/app/src/main/res/values/dimens.xml
+++ b/sampleapp/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="signature_view_border_thickness">2dp</dimen>
 </resources>
