--- a/sampleapp/app/src/main/res/layout/activity_main.xml
+++ b/sampleapp/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:text="QuickChip With Headful Profile" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/inputLayoutCustomerProfileId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
                     android:maxLength="10"
                     android:maxLines="1"
                     android:textSize="14sp" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/quick_chip_headless_additional_payment_profile"
